update browser driver from chrome to firefox

--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
             <version>7.0.0</version>
-            <scope>compile</scope>
+            <scope>test</scope>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
@@ -55,6 +55,5 @@
         </dependency>
 
     </dependencies>
-
 
 </project>
